Inicio: Actualización de menú

--- a/apps/core/templates/core/base.html
+++ b/apps/core/templates/core/base.html
@@ -41,7 +41,7 @@
 <!--FIN CONTENEDOR CARGANDO-->
 
 <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark menuTexto" style="background-color: #00AEEF !important;">
-    <a class="navbar-brand ps-3" href="{% url 'core:home' %}">INATEC</a>
+    <a class="navbar-brand ps-3" href="{% url 'core:home' %}">SISTEMA CASTRO</a>
     <button class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0" id="sidebarToggle" style="color: #ffffff !important;">
         <i class="fas fa-bars"></i>
     </button>
@@ -67,133 +67,21 @@
                         <div class="sb-nav-link-icon icon_menu"><i class="fas fa-home"></i></div>
                         Inicio
                     </a>
-                    <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#movimientos"
-                       aria-expanded="false" aria-controls="movimientos">
+                    <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#usuarios"
+                       aria-expanded="false" aria-controls="usuarios">
                         <div class="sb-nav-link-icon icon_menu"><i class="fas fa-stream"></i></div>
-                        Movimientos
+                        Usuarios
                         <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
                     </a>
-                    <div class="collapse" id="movimientos" aria-labelledby="headingOne"
+                    <div class="collapse" id="usuarios" aria-labelledby="headingOne"
                          data-bs-parent="#sidenavAccordion">
                         <nav class="sb-sidenav-menu-nested nav">
-                            <a class="nav-link" href="{% url 'movimientos:cierre_mes' %}">1- Cierre de Mes</a>
-                            <a class="nav-link" href="{% url 'movimientos:movimientos_dcr' %}">2- Movimientos (Débitos, Créditos y Recaudos)</a>
-                            <a class="nav-link" href="{% url 'movimientos:exentos' %}">3- Exentos (Solo si hay movimientos)</a>
+                            <a class="nav-link" href="#">Usuarios</a>
+                            <a class="nav-link" href="#">Roles</a>
+                            <a class="nav-link" href="#">Permisos</a>
                         </nav>
                     </div>
-                    <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#procesos"
-                       aria-expanded="false" aria-controls="procesos">
-                        <div class="sb-nav-link-icon icon_menu"><i class="fas fa-server"></i></div>
-                        Procesos
-                        <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
-                    </a>
-                    <div class="collapse" id="procesos" aria-labelledby="headingOne"
-                         data-bs-parent="#sidenavAccordion">
-                        <nav class="sb-sidenav-menu-nested nav">
-                            <a class="nav-link" href="{% url 'procesos:genera_movimientos' %}">1- Genera movimientos del
-                                trabajador</a>
-                            <a class="nav-link" href="{% url 'procesos:regenera_facturas' %}">2- Regeneración de la
-                                factura</a>
-                            <a class="nav-link" href="{% url 'procesos:actualizar_exentos' %}">3- Actualizar Exentos (Si
-                                hay movimientos)</a>
-                            <a class="nav-link" href="{% url 'procesos:generar_novedades' %}">4- Generar novedades</a>
-                            <a class="nav-link" href="{% url 'procesos:genera_facturas' %}">5- Genera factura del
-                                mes</a>
-                            <a class="nav-link" href="{% url 'procesos:movimiento_inss' %}">6- Aplica movimientos del
-                                mes</a>
-                              <a class="nav-link" href="{% url 'procesos:recepcion_convenio' %}">7- Recepción de convenios</a>
-                            <a class="nav-link" href="{% url 'procesos:recepcion_debito' %}">8- Recepción de debitos</a>
-                        </nav>
-                    </div>
-                    <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#exportar"
-                       aria-expanded="false" aria-controls="exportar">
-                        <div class="sb-nav-link-icon icon_menu"><i class="fas fa-project-diagram"></i></div>
-                        Exportar
-                        <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
-                    </a>
-                    <div class="collapse" id="exportar" aria-labelledby="headingOne"
-                         data-bs-parent="#sidenavAccordion">
-                        <nav class="sb-sidenav-menu-nested nav">
-                            <a class="nav-link" href="{% url 'exportacion:cargar_tiraje' %}">1- Crear archivo de texto
-                                de facturación INATEC</a>
-                        </nav>
-                    </div>
-                    <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#reportes"
-                       aria-expanded="false" aria-controls="reportes">
-                        <div class="sb-nav-link-icon icon_menu"><i class="fas fa-file-download"></i></div>
-                        Reportes
-                        <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
-                    </a>
-                    <div class="collapse" id="reportes" aria-labelledby="headingOne"
-                         data-bs-parent="#sidenavAccordion">
-                        <nav class="sb-sidenav-menu-nested nav">
-                            <a class="nav-link" href="{% url 'reportes:inicio_reporte' %}">Menú de reportes</a>
-                        </nav>
-                    </div>
-                    {% comment %}
-                    <div class="sb-sidenav-menu-heading">Interface</div>
-                    <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapseLayouts"
-                       aria-expanded="false" aria-controls="collapseLayouts">
-                        <div class="sb-nav-link-icon"><i class="fas fa-columns"></i></div>
-                        Layouts
-                        <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
-                    </a>
-                    <div class="collapse" id="collapseLayouts" aria-labelledby="headingOne"
-                         data-bs-parent="#sidenavAccordion">
-                        <nav class="sb-sidenav-menu-nested nav">
-                            <a class="nav-link" href="layout-static.html">Static Navigation</a>
-                            <a class="nav-link" href="layout-sidenav-light.html">Light Sidenav</a>
-                        </nav>
-                    </div>
-                    <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapsePages"
-                       aria-expanded="false" aria-controls="collapsePages">
-                        <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
-                        Pages
-                        <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
-                    </a>
-                    <div class="collapse" id="collapsePages" aria-labelledby="headingTwo"
-                         data-bs-parent="#sidenavAccordion">
-                        <nav class="sb-sidenav-menu-nested nav accordion" id="sidenavAccordionPages">
-                            <a class="nav-link collapsed" href="#" data-bs-toggle="collapse"
-                               data-bs-target="#pagesCollapseAuth" aria-expanded="false"
-                               aria-controls="pagesCollapseAuth">
-                                Authentication
-                                <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
-                            </a>
-                            <div class="collapse" id="pagesCollapseAuth" aria-labelledby="headingOne"
-                                 data-bs-parent="#sidenavAccordionPages">
-                                <nav class="sb-sidenav-menu-nested nav">
-                                    <a class="nav-link" href="login.html">Login</a>
-                                    <a class="nav-link" href="register.html">Register</a>
-                                    <a class="nav-link" href="password.html">Forgot Password</a>
-                                </nav>
-                            </div>
-                            <a class="nav-link collapsed" href="#" data-bs-toggle="collapse"
-                               data-bs-target="#pagesCollapseError" aria-expanded="false"
-                               aria-controls="pagesCollapseError">
-                                Error
-                                <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
-                            </a>
-                            <div class="collapse" id="pagesCollapseError" aria-labelledby="headingOne"
-                                 data-bs-parent="#sidenavAccordionPages">
-                                <nav class="sb-sidenav-menu-nested nav">
-                                    <a class="nav-link" href="401.html">401 Page</a>
-                                    <a class="nav-link" href="404.html">404 Page</a>
-                                    <a class="nav-link" href="500.html">500 Page</a>
-                                </nav>
-                            </div>
-                        </nav>
-                    </div>
-                    <div class="sb-sidenav-menu-heading">Addons</div>
-                    <a class="nav-link" href="charts.html">
-                        <div class="sb-nav-link-icon"><i class="fas fa-chart-area"></i></div>
-                        Charts
-                    </a>
-                    <a class="nav-link" href="tables.html">
-                        <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
-                        Tables
-                    </a>
-                    {% endcomment %}
+
                 </div>
             </div>
         </nav>
@@ -210,7 +98,7 @@
         <footer class="py-3 bg-dark mt-auto" style="background-color: #ff0085 !important;">
             <div class="container-fluid">
                 <div class="text-center text-light menuTexto">
-                    <span>Derechos Reservados © INATEC {% now 'Y' %}</span>
+                    <span>Derechos Reservados © SISTEMA CASTRO {% now 'Y' %}</span>
                 </div>
             </div>
         </footer>
