--- a/apps/core/templates/core/home.html
+++ b/apps/core/templates/core/home.html
@@ -19,13 +19,8 @@
 {% endblock %}
 
 {% block content %}
-    <img id="img_home" class="" src="{% static 'core/images/banner-facturacion.jpg' %}" alt="Facturación INSS"
-                     style="width: 100%; height: 80%; object-fit: cover">
-    <!-- <div class="card my-3">
-        <div class="card-body">
-            <p class="display-6 text-center">Sistema de Facturación 2%</p>
-        </div>
-    </div> -->
+{#    <img id="img_home" class="" src="{% static 'core/images/banner-facturacion.jpg' %}" alt="Facturación INSS"#}
+{#                     style="width: 100%; height: 80%; object-fit: cover">#}
 {% endblock %}
 
 <style>
