Inicio: Actualización del título

--- a/apps/core/templates/core/base.html
+++ b/apps/core/templates/core/base.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
     <meta name="description" content=""/>
     <meta name="author" content=""/>
-    <title>INATEC</title>
+    <title>Sistema Castro</title>
     <link rel="stylesheet" href="{% static 'core/css/alertify.min.css' %}"/>
     <link rel="icon" href="{% static 'core/images/favicon.ico' %}">
     <link rel="stylesheet" href="{% static 'core/vendor/sb-admin/css/sb-admin.min.css' %}">
