--- a/apps/usuarios/templates/usuarios/login.html
+++ b/apps/usuarios/templates/usuarios/login.html
@@ -1,6 +1,7 @@
 {% load static %}
 <!doctype html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
@@ -10,65 +11,198 @@
     <link rel="icon" href="{% static 'core/images/favicon.ico' %}">
     <link rel="stylesheet" href="{% static 'core/vendor/sb-admin/css/sb-admin.min.css' %}">
     <link rel="stylesheet" href="{% static 'core/vendor/sweetalert2/css/sweetalert2.min.css' %}">
+
+    <link rel="stylesheet" href="{% static 'core/vendor/sweetalert2/css/sweetalert2.min.css' %}">
+    <link rel="stylesheet" href="{% static 'core/vendor/datatables/css/dataTables.bootstrap5.min.css' %}">
+    <link rel="stylesheet" href="{% static 'core/vendor/datatables/css/responsive.bootstrap5.min.css' %}">
+    <link rel="stylesheet" href="{% static 'core/vendor/datatables/css/scroller.bootstrap5.min.css' %}">
+
     <style>
-        .card-login {
-            max-width: 25rem;
+
+        @import url(https://fonts.googleapis.com/css?family=Roboto:300,400,700&display=swap);
+
+        body {
+            background: #f5f5f5;
         }
 
-        .bg-fondo {
-            background-image: url("{% static 'core/images/fondo.png' %}");
+        @media only screen and (max-width: 767px) {
+            .hide-on-mobile {
+                display: none;
+            }
         }
+
+        .login-box {
+            background-size: cover !important;
+            background: url({% static 'usuarios/img/fondo_menu.png' %}) center;
+            padding: 50px;
+            margin: 0px auto;
+        {#min-height: 700px;#} height: 100vh;
+            -webkit-box-shadow: 0 2px 60px -5px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 2px 60px -5px rgba(0, 0, 0, 0.1);
+        }
+
+        .logo {
+            font-family: "Script MT";
+            font-size: 54px;
+            text-align: center;
+            color: #888888;
+            margin-bottom: 50px;
+        }
+
+        .logo .logo-font {
+            color: #3BC3FF;
+        }
+
+        @media only screen and (max-width: 767px) {
+            .logo {
+                font-size: 34px;
+            }
+        }
+
+        .header-title {
+            text-align: center;
+            margin-bottom: 50px;
+        }
+
+        .login-form {
+            max-width: 300px;
+            margin: 0 auto;
+        }
+
+        .login-form .form-control {
+            border-radius: 0;
+            margin-bottom: 30px;
+        }
+
+        .login-form .form-group {
+            position: relative;
+        }
+
+        .login-form .form-group .forgot-password {
+            position: absolute;
+            top: 6px;
+            right: 15px;
+        }
+
+        .login-form .btn {
+            border-radius: 0;
+            -webkit-box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            margin-bottom: 30px;
+        }
+
+        .login-form .btn.btn-primary {
+            background: #3BC3FF;
+            border-color: #31c0ff;
+        }
+
+        .slider-feature-card {
+            background: #fff;
+            max-width: 280px;
+            margin: 0 auto;
+            padding: 30px;
+            text-align: center;
+            -webkit-box-shadow: 0 2px 25px -3px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 2px 25px -3px rgba(0, 0, 0, 0.1);
+        }
+
+        .slider-feature-card img {
+            height: 80px;
+            margin-top: 30px;
+            margin-bottom: 30px;
+        }
+
+        .slider-feature-card h3,
+        .slider-feature-card p {
+            margin-bottom: 30px;
+        }
+
+        .carousel-indicators {
+            bottom: -50px;
+        }
+
+        .carousel-indicators li {
+            cursor: pointer;
+        }
+
     </style>
 </head>
-<body class="d-flex flex-column h-100 bg-fondo">
-<main class="flex-shrink-0">
-    <div class="container">
-        <section id="message_loader">
-        </section>
-        <section class="d-none d-md-block">
-            <div class="d-flex align-items-center justify-content-around my-5">
-                <img class="img-fluid" src="{% static 'core/images/logo_gobierno.png' %}" alt="..."
-                     style="height: 7rem !important;">
-                <img class="img-fluid" src="{% static 'core/images/logo_inatec.png' %}" alt="..."
-                     style="height: 7rem !important;">
-            </div>
-        </section>
-        <div class="row d-none d-md-block">
-            <div class="col text-center text-light">
-                <h2><strong>Sistema de Facturación 2%</strong></h2>
-            </div>
-        </div>
-        <div class="card card-login mx-auto my-5 border-0">
-            <div class="card-header text-center text-light text-uppercase" style="background-color: #19538C;">
-                <strong>Iniciar Sesión</strong>
-            </div>
-            <div class="card-body">
-                <form id="frm_login" data-url="{% url 'usuarios:login' %}">
-                    {% csrf_token %}
-                    <div class="mb-3">
-                        <label for="id_username" class="d-none">Usuario</label>
-                        <input type="text" id="id_username" name="username" class="form-control" placeholder="Usuario"
-                               required="required">
 
+<body style="padding: 0px; margin: 0px">
+<section class="body">
+    <div class="container">
+        <div class="login-box">
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="logo">
+                        <span class="logo-font">Sistema</span>Castro
                     </div>
-                    <div class="mb-3">
-                        <label for="id_password" class="d-none">Contraseña</label>
-                        <input type="password" id="id_password" name="password" class="form-control"
-                               placeholder="Contraseña" autocomplete="" required="required">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-6">
+                    <section id="message_loader">
+                    </section>
+                    <br>
+                    <h3 class="header-title">ACCESO</h3>
+                    <form class="login-form" id="frm_login" data-url="{% url 'usuarios:login' %}">
+                        {% csrf_token %}
+                        <div class="form-group">
+                            <input id="id_username" name="username" required="required" type="text" class="form-control"
+                                   placeholder="Usuario">
+                        </div>
+                        <div class="form-group">
+                            <input type="Password" id="id_password" name="password" required="required"
+                                   class="form-control" placeholder="Contraseña">
+                        </div>
+                        <div class="form-group">
+                            <button type="submit" class="btn btn-primary btn-block">Acceder</button>
+                        </div>
+                    </form>
+                </div>
+
+                {# INFORMATIVO #}
+                <div class="col-sm-6 hide-on-mobile">
+                    <div id="demo" class="carousel slide" data-ride="carousel">
+                        <!-- Indicators -->
+                        <ul class="carousel-indicators">
+                            <li data-target="#demo" data-slide-to="0" class="active"></li>
+                            <li data-target="#demo" data-slide-to="1"></li>
+                        </ul>
+                        <!-- The slideshow -->
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <div class="slider-feature-card">
+                                    <img src="https://i.imgur.com/YMn8Xo1.png" alt="">
+                                    <h3 class="slider-title">Title Here</h3>
+                                    <p class="slider-description">Lorem ipsum dolor sit amet, consectetur adipisicing
+                                        elit. Iure, odio!</p>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <div class="slider-feature-card">
+                                    <img src="https://i.imgur.com/Yi5KXKM.png" alt="">
+                                    <h3 class="slider-title">Title Here</h3>
+                                    <p class="slider-description">Lorem ipsum dolor sit amet, consectetur adipisicing
+                                        elit. Ratione, debitis?</p>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Left and right controls -->
+                        <a class="carousel-control-prev" href="#demo" data-slide="prev">
+                            <span class="carousel-control-prev-icon"></span>
+                        </a>
+                        <a class="carousel-control-next" href="#demo" data-slide="next">
+                            <span class="carousel-control-next-icon"></span>
+                        </a>
                     </div>
-                    <button class="btn btn-success w-100" type="submit">Acceder</button>
-                </form>
+                </div>
             </div>
         </div>
     </div>
-</main>
-<footer class="mt-auto" style="background-color: #165C92;">
-    <div class="container-fluid my-3">
-        <div class="text-center text-light">
-            <span>Derechos Reservados © INATEC {% now 'Y' %}</span>
-        </div>
-    </div>
-</footer>
+</section>
+</body>
+
 <script src="{% static 'core/vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
 <script src="{% static 'core/vendor/jquery/js/jquery.min.js' %}"></script>
 <script src="{% static 'core/vendor/sweetalert2/js/sweetalert2.min.js' %}"></script>
