--- a/apps/core/templates/core/base.html
+++ b/apps/core/templates/core/base.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="{% static 'core/vendor/datatables/css/scroller.bootstrap5.min.css' %}">
     <link rel="stylesheet" href="{% static 'core/css/loader.css' %}">
     <link rel="stylesheet" href="{% static 'core/css/estilos.css' %}">
+    <link rel="stylesheet" href="{% static 'core/css/dataTables.bootstrap5.min.css' %}">
     {% block styles %}
 
     {% endblock %}
@@ -40,7 +41,7 @@
 </div>
 <!--FIN CONTENEDOR CARGANDO-->
 
-<nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark menuTexto" style="background-color: #00AEEF !important;">
+<nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark menuTexto" style="background-color: #17627e !important;">
     <a class="navbar-brand ps-3" href="{% url 'core:home' %}">SISTEMA CASTRO</a>
     <button class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0" id="sidebarToggle" style="color: #ffffff !important;">
         <i class="fas fa-bars"></i>
@@ -60,7 +61,7 @@
 </nav>
 <div id="layoutSidenav">
     <div id="layoutSidenav_nav">
-        <nav class="sb-sidenav accordion sb-sidenav-dark menuTexto" id="sidenavAccordion" style="background-color: #00AEEF">
+        <nav class="sb-sidenav accordion sb-sidenav-dark menuTexto" id="sidenavAccordion" style="background-color: #17627e !important">
             <div class="sb-sidenav-menu">
                 <div class="nav">
                     <a class="nav-link" href="{% url 'core:home' %}">
@@ -76,7 +77,7 @@
                     <div class="collapse" id="usuarios" aria-labelledby="headingOne"
                          data-bs-parent="#sidenavAccordion">
                         <nav class="sb-sidenav-menu-nested nav">
-                            <a class="nav-link" href="#">Usuarios</a>
+                            <a class="nav-link" href="{% url 'usuarios:list' %}">Usuarios</a>
                             <a class="nav-link" href="#">Roles</a>
                             <a class="nav-link" href="#">Permisos</a>
                         </nav>
@@ -86,26 +87,28 @@
             </div>
         </nav>
     </div>
-    <div id="layoutSidenav_content">
+    <div id="layoutSidenav_content" style="background-color: whitesmoke">
         <main>
-            <div class="container-fluid">
+            <div class="container-fluid" >
                 <section id="message_loader">
                 </section>
                 {% block content %}
                 {% endblock %}
             </div>
         </main>
-        <footer class="py-3 bg-dark mt-auto" style="background-color: #ff0085 !important;">
-            <div class="container-fluid">
-                <div class="text-center text-light menuTexto">
-                    <span>Derechos Reservados © SISTEMA CASTRO {% now 'Y' %}</span>
-                </div>
-            </div>
-        </footer>
+{#        <footer class="py-3 bg-dark mt-auto" style="background-color: #ff0085 !important;">#}
+{#            <div class="container-fluid">#}
+{#                <div class="text-center text-light menuTexto">#}
+{#                    <span>Derechos Reservados © SISTEMA CASTRO {% now 'Y' %}</span>#}
+{#                </div>#}
+{#            </div>#}
+{#        </footer>#}
     </div>
 </div>
 {% block modals %}
 {% endblock %}
+<script src="{% static 'core/js/dataTables.bootstrap5.min.js' %}"></script>
+<script src="{% static 'core/js/jquery.dataTables.min.js' %}"></script>
 <script src="{% static 'core/vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
 <script src="{% static 'core/vendor/jquery/js/jquery.min.js' %}"></script>
 <script src="{% static 'core/js/alertify.min.js' %}"></script>
@@ -125,9 +128,8 @@
 <script src="{% static 'core/vendor/sb-admin/js/sb-admin.min.js' %}"></script>
 <script src="{% static 'core/js/core.min.js' %}"></script>
 <script src="{% static 'core/js/loader.js' %}"></script>
+
 {% block scripts %}
-{% endblock %}
-{% block extra_scripts %}
 {% endblock %}
 </body>
 </html>
