--- a/apps/usuarios/templates/usuarios/login.html
+++ b/apps/usuarios/templates/usuarios/login.html
@@ -7,7 +7,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>INATEC</title>
+    <title>SISTEMA CASTRO</title>
     <link rel="icon" href="{% static 'core/images/favicon.ico' %}">
     <link rel="stylesheet" href="{% static 'core/vendor/sb-admin/css/sb-admin.min.css' %}">
     <link rel="stylesheet" href="{% static 'core/vendor/sweetalert2/css/sweetalert2.min.css' %}">
