--- a/apps/core/templates/core/base.html
+++ b/apps/core/templates/core/base.html
@@ -76,7 +76,7 @@
                     </a>
                     <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#usuarios"
                        aria-expanded="false" aria-controls="usuarios">
-                        <div class="sb-nav-link-icon icon_menu"><i class="fas fa-stream"></i></div>
+                        <div class="sb-nav-link-icon icon_menu"><i class="fas fa-user"></i></div>
                         Usuarios
                         <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
                     </a>
@@ -91,21 +91,21 @@
 
 
                      <a class="nav-link" href="{% url 'core:home' %}">
-                        <div class="sb-nav-link-icon icon_menu"><i class="fas fa-stream"></i></div>
+                        <div class="sb-nav-link-icon icon_menu"><i class="fas fa-warehouse"></i></div>
                         Bodega
                     </a>
 
 
                     <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#productos"
                        aria-expanded="false" aria-controls="productos">
-                        <div class="sb-nav-link-icon icon_menu"><i class="fas fa-stream"></i></div>
+                        <div class="sb-nav-link-icon icon_menu"><i class="fas fa-store"></i></div>
                         Productos
                         <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
                     </a>
                     <div class="collapse" id="productos" aria-labelledby="headingOne"
                          data-bs-parent="#sidenavAccordion">
                         <nav class="sb-sidenav-menu-nested nav">
-                            <a class="nav-link" href="{% url 'usuarios:list' %}">Categorías</a>
+                            <a class="nav-link" href="{% url 'public:categoria' %}">Categorías</a>
                             <a class="nav-link" href="#">Productos</a>
                         </nav>
                     </div>
