--- a/apps/core/templates/core/base.html
+++ b/apps/core/templates/core/base.html
@@ -106,7 +106,8 @@
                          data-bs-parent="#sidenavAccordion">
                         <nav class="sb-sidenav-menu-nested nav">
                             <a class="nav-link" href="{% url 'public:categoria' %}">Categorías</a>
-                            <a class="nav-link" href="#">Productos</a>
+                            <a class="nav-link" href="{% url 'public:piezas' %}">Piezas</a>
+                            <a class="nav-link" href="{% url 'public:productopiezas' %}">Mano Factura</a>
                         </nav>
                     </div>
 
